<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">
	<data>
		<variable
			name="studentsPrice"
			type="Double" />

		<variable
			name="employeesPrice"
			type="Double" />

		<variable
			name="pupilsPrice"
			type="Double" />

		<variable
			name="otherPrice"
			type="Double" />

		<variable
			name="noKnownPrice"
			type="boolean" />

		<import type="android.view.View" />
		<import type="de.uni_potsdam.hpi.openmensa.ui.day.MealAdapter" />
	</data>

	<LinearLayout
		android:background="?selectableItemBackground"
		android:id="@+id/linear_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingBottom="4dip"
		android:paddingLeft="@dimen/expanderPadding"
		android:paddingTop="4dip"
		android:paddingRight="10dip">

		<RelativeLayout
			android:visibility="@{safeUnbox(studentsPrice) > 0 ? View.VISIBLE : View.GONE}"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/students" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/priceListFloat"
				android:text="@{MealAdapter.formatPrice(studentsPrice)}"
				tools:text="Lorem Ipsum" />

		</RelativeLayout>

		<RelativeLayout
			android:visibility="@{safeUnbox(employeesPrice) > 0 ? View.VISIBLE : View.GONE}"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/employees" />

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/priceListFloat"
				android:text="@{MealAdapter.formatPrice(employeesPrice)}"
				tools:text="Lorem Ipsum"/>

		</RelativeLayout>

		<RelativeLayout
			android:visibility="@{safeUnbox(pupilsPrice) > 0 ? View.VISIBLE : View.GONE}"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/pupils" />

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/priceListFloat"
				android:text="@{MealAdapter.formatPrice(pupilsPrice)}"
				tools:text="Lorem Ipsum"/>

		</RelativeLayout>

		<RelativeLayout
			android:visibility="@{safeUnbox(otherPrice) > 0 ? View.VISIBLE : View.GONE}"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/other" />

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="@dimen/priceListFloat"
				android:text="@{MealAdapter.formatPrice(otherPrice)}"
				tools:text="Lorem Ipsum"/>

		</RelativeLayout>

		<RelativeLayout
			android:visibility="@{noKnownPrice ? View.VISIBLE : View.GONE}"
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_known_price" />

		</RelativeLayout>

	</LinearLayout>
</layout>